--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+
+
         
     }
 }
@@ -60,5 +62,11 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         
     }
+
+    dependencies {
+        implementation 'commons-codec:commons-codec:1.15'
+    }
 }
+
+
 
