--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,6 @@ buildscript {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         google()
     }
-    dependencies {
-        
-
-    }
 }
 
 allprojects {
@@ -43,6 +39,10 @@ allprojects {
 project(":desktop") {
     apply plugin: "java-library"
 
+    compileJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 
     dependencies {
         implementation project(":core")
@@ -59,6 +59,10 @@ project(":desktop") {
 project(":core") {
     apply plugin: "java-library"
 
+    compileJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
