--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,11 @@ project(":core") {
     }
 
 
+    dependencies {
+        implementation 'com.thoughtworks.xstream:xstream:1.4.20'
+    }
 }
+
 
 
 
