--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        implementation("org.apache.poi:poi-ooxml:5.2.2")
 
 
         
@@ -82,11 +83,18 @@ project(":core") {
     dependencies {
         implementation 'kryonet:kryonet:2.21-2'
     }
+    dependencies {
+        implementation("org.apache.poi:poi-ooxml:5.2.2")
+    }
 
 
     dependencies {
         implementation 'com.google.code.gson:gson:2.10.1'
     }
+
+
+
+
 }
 
 
